--- a/pages/mx_routine/mx_routine.wxml
+++ b/pages/mx_routine/mx_routine.wxml
@@ -14,21 +14,23 @@
       <text class='bloc' style='font-weight:bold'>二、用户的帐号，密码和安全性</text>
       <text class='bloc' style='padding-left:10px'>用户一旦注册授权成功，成为本站的合法用户。用户将对用户名和密码安全负全部责任。此外，每个用户都要对以其用户名进行的所有活动和事件负全责。用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本站。</text>
       <text class='bloc' style='font-weight:bold'>三、小梦想互助平台参与互助规则</text>
-      <text class='bloc' style='padding-left:10px'>1、基本流程：多人参与互助并支付互助金额——通过抓阄机制随机匹配1名幸运者——幸运者获得所有梦想互助金启动梦想——平台跟踪报道梦想执行情况；</text>
-      <text class='bloc' style='padding-left:10px'>2、梦想编码：指用户购买梦想池的互助金额后，小梦想互助平台给用户随机匹配一个梦想编码，该编码参与抓阄。</text>
-    <text class='bloc' style='padding-left:10px'>3、抓阄机制：每个梦想池中，从参与互助的所有用户中随机产生1名幸运者，幸运者的编号计算公式为：通过随机抓阄机制：每个梦想池中，从参与互助的所有用户中随机产生1名幸运者，幸运者的编号计算公式为：
-    ((A+B)/C)取余数 + 10000000，
-    数值A = 梦想池结束后最新一期“中国福利彩票”期号+前五个红色球的数字 
-数值B = 平台梦想池的池号
-数值C= 梦想池参与份数
-4、幸运者编号公布时间：梦想池结束后的最新一个中国福利彩票号码公布后的2小时内。
+      <text class='bloc' style='padding-left:10px'>1、基本流程：多人参与每期互助并支付互助金额——通过抓阄机制随机匹配1名幸运者——幸运者获得每期所有梦想互助金启动梦想——平台跟踪报道梦想执行情况</text>
+      <text class='bloc' style='padding-left:10px'>2、编号：用户支付购买每期梦想互助份额后，平台会给用户随机匹配一个编号，该编号参与每期梦想互助的幸运者编号抓阄。</text>
+    <text class='bloc' style='padding-left:10px'>3、抓阄机制：每期梦想互助中，从参与互助的所有用户中随机产生1名幸运者。
+幸运者的编号计算公式为：
+
+    （ （A+B）/ C  ）取余数 + 10000000
+数值A = 每期梦想互助结束后最新一期“中国福利彩票”期号+前五个红色球的数字
+数值B = 每期梦想互助的期号
+数值C= 每期梦想互助参与份数
+4、幸运者编号公布时间：每期梦想互助结束后的最新一个中国福利彩票号码公布后的2小时内。
 5、小梦想互助平台承诺遵循以下的原则运营平台，确保所有用户在小梦想互助平台中享受同等的权利与义务。 平等原则：用户和小梦想互助平台在交易过程中具有同等的法律地位。 自由原则：用户享有自愿在小梦想互助平台参与互助，任何人不得非法干预。 公平原则：用户和小梦想互助平台行使权利、履行义务应当遵循公平原则。 诚实信用原则：用户和小梦想互助平台行使权利、履行义务应当遵循诚实信用原则。 履行义务原则：用户向小梦想互助平台参与互助时，用户和小梦想互助平台皆有有义务根据本服务协议的约定完成。
-6、用户知悉：除本协议另有约定外，梦想池互助结束后，用户如果没有成为幸运者，参与互助的全部资金给予那位抓阄产生的1名幸运者，不能退回。用户完全了解参与小梦想互助平台存在的风险，小梦想互助平台无法保证用户参与互助时一定会成为幸运者。
+6、用户知悉：除本协议另有约定外，每期梦想互助结束后，用户如果没有成为幸运者，参与互助的全部资金给予那位抓阄产生的1名幸运者，不能退回。用户完全了解参与小梦想互助平台存在的风险，小梦想互助平台无法保证用户参与互助时一定会成为幸运者。
       </text>
 
       <text class='bloc' style='font-weight:bold'>四、用户的权利和义务</text>
 <text class='bloc' style='padding-left:10px'>1、用户有权拥有其在小梦想互助平台的用户名及密码，并用该用户名和密码登录小梦想互助平台参与梦想互助。用户不得以任何形式转让或授权他人使用自己的小梦想互助平台用户名。
-2、用户有权根据本协议的规定以及小梦想互助平台上发布的相关规则在小梦想互助平台上查询梦想池信息、添加小梦想、邀请关注好友、上传认证图片、参加小梦想互助平台的有关活动，以及享受小梦想互助平台提供的其它信息服务。
+2、用户有权根据本协议的规定以及小梦想互助平台上发布的相关规则在小梦想互助平台上查询每期梦想互助信息、添加小梦想、邀请关注好友、上传认证图片、参加小梦想互助平台的有关活动，以及享受小梦想互助平台提供的其它信息服务。
 3、用户有义务在注册授权提交时提供自己的真实资料，并保证诸如手机号、小梦想、身份证银行卡等内容的有效性及真实性，保证小梦想互助平台可以通过上述联系方式与用户本人进行联系。同时，用户也有义务在相关资料发生变更时及时更新有关注册资料。用户保证不以他人资料在小梦想互助平台进行参与梦想互助。
 4、用户应当保证在小梦想互助平台提交的梦想真实性，中奖后平台派专人一对一审核幸运者梦想内容属性和真实性，不真实或者属性不符合的不给予互助金。
 5、用户享有言论自由权利；并拥有适度修改、删除自己发表的小梦想的权利用户不得在小梦想互助平台发表包含以下内容的文字：
@@ -51,7 +53,7 @@
 1) 用户违反本协议规定或有违反法律法规和地方规章的行为的，小梦想互助平台有权停止传输并删除其信息，禁止用户发言，注销用户账户并按照相关法律规定向相关主管部门进行披露。
 2) 对于用户在小梦想互助平台进行的下列行为，小梦想互助平台有权对用户采取删除其信息、禁止用户发言、注销用户账户等限制性措施：包括发布或以电子邮件或以其他方式传送存在恶意、虚假和侵犯他人人身财产权利内容的信息，进行与分享互助无关或不是以分享互助为目的的活动，恶意注册、签到、评论等方式试图扰乱正常互助秩序，将有关干扰、破坏或限制任何计算机软件、硬件或通讯设备功能的软件病毒或其他计算机代码、档案和程序之资料，加以上载、发布、发送电子邮件或以其他方式传送，干扰或破坏小梦想互助平台和服务或与小梦想互助平台和服务相连的服务器和网络，或发布其他违反公共利益或可能严重损害小梦想互助平台和其它用户合法利益的信息。
 4、用户在此免费授予小梦想互助平台永久性的独家使用权(并有权对该权利进行再授权)，使小梦想互助平台有权在全球范围内(全部或部分地)使用、复制、修订、改写、发布、翻译和展示用户公示于小梦想互助平台的各类信息，或制作其派生作品，和或以现在已知或日后开发的任何形式、媒体或技术，将上述信息纳入其它作品内。
-5、对于小梦想互助平台上的梦想池各种玩法，小梦想互助平台有权根据市场变动修改规则。
+5、对于小梦想互助平台上的梦想互助各种玩法，小梦想互助平台有权根据市场变动修改规则
 6、小梦想互助平台分享互助模式，秉着双方自愿原则，分享存在风险，小梦想互助平台不对最后的幸运者编号结果承担责任，望所有用户谨慎参与。
 </text>
  <text class='bloc' style='font-weight:bold'>六、责任限制</text>
