--- a/pages/mx_xieyi/mx_xieyi.wxml
+++ b/pages/mx_xieyi/mx_xieyi.wxml
@@ -4,6 +4,7 @@
  <view class='page-header'></view>
  <view class='page-body'>
   <view class='box_huzhu' style='margin-bottom:100px'>
+    <text class='bloc_small'>梦想类型只支持： 创业/投资/做生意</text>
     <text class='bloc'>梦想标题(20字以内)</text>
     <input type='text' value='{{titleText}}' bindinput='titleInput' placeholder="请输入您的梦想标题" maxlength="11" class='mx_number bloc' style='margin-top:20px'/>
     <text class='bloc mt_20'>梦想简介(140字以内)</text>
@@ -17,6 +18,11 @@
        <text class='' style='font-size:13px'>阅读并同意</text>
        <text class='' bindtap='readDetial' style='font-size:13px;text-decoration:underline;color:#5ecd98'>《小梦想互助平台参与互助协议》</text>
       </checkbox-group>
+     </view>
+     
+     <view class='' style='text-align:center'>
+       <text class='' style='font-size:13px'>提交</text>
+        <text class='' bindtap='downLoad' style='font-size:13px;text-decoration:underline;color:#5ecd98'>《小梦想互助幸运者梦想互助金申请公函》</text>
      </view>
     <view class='yz_group row' style='width:70%;margin:10px auto'>
       <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'><button style='color:white;background:#5ecd98;border-radius:25px;margin-bottom:10px' bindtap='submitDream'>提交</button></view>
