--- a/pages/mx_xieyi/mx_xieyi.wxss
+++ b/pages/mx_xieyi/mx_xieyi.wxss
@@ -2,6 +2,7 @@
 page{background: #f7f7f7}
 .box_huzhu{margin: 15px;background: white;border-radius: 10px;box-shadow: 0px 5px 5px #e0e9f1;padding: 15px}
 .yz_group{font-size: 20px}
+.bloc_small{font-size: 14px;color:darkgrey}
 .bloc{font-size: 20px}
 .bloc_15{font-size: 15px;display: block;margin-top: 20px}
 .mx_xieyi{font-size: 15px;display: block;text-indent: 40px;}
