--- a/pages/mx_jinxing/mx_jinxing.wxml
+++ b/pages/mx_jinxing/mx_jinxing.wxml
@@ -1,90 +1,91 @@
 <!--pages/mx_jinxing.wxml-->
 <!-- <text>pages/mx_jinxing.wxml</text> -->
-<view class='container'>
-  <view class='page-header'>
-    <view class='menu col fixed_menu'>
-      <view id="running"  bindtap="switchType" class='{{type.running}}' >
-        <text >进行中</text>
-      </view>
-      <view id="joined" bindtap="switchType" class='{{type.joined}}'>
-        <text>我参与</text>
-      </view>
-      <view id="history" bindtap="switchType" class='{{type.history}}'>
-        <text>已结束</text>
-      </view>
-    </view>
-  </view>
- <view class='page-body' style='margin-bottom:9em;padding-top:35px'>
+<!--UI 1.0 版本-->
 
-<!--新加梦想池-->
-<view id="{{pool.pid}}" bindtap='poolInfo' wx:for="{{showingPool}}" wx:for-item="pool" wx:for-index="seek" class="page-body">
-    <view  class="page-section wm_box">
-      <view class='flex-item wm_header'>
-        <view class='wm_menxiang'>{{pool.ptitle}}</view>
-        <view class='wm_time'>{{pool.tdescription}}
-        </view>
-        <view catchtap='sharePool' class='col-2'>
-      <button id="{{pool.ptitle}}" open-type='share'  style='background-image:url("http://cloud.antit.top/share.png");background-size:100%;width:35px;height:35px;border:none'  plain='true'></button>
-      </view>
-      </view>
-      <!-- 这一块 -->
-      <view class='col' style='background:white;padding-top:10px'>
-        <text class='bloc' style='text-align:center;margin:0 auto'><text class='color_red'>{{pool.realBill}}</text> {{pool.unit}}</text>
-      </view>
-      <view class='col' style='background:white'>
-        <text wx:if='{{pool.state=="RUNNING"}}' class='bloc' style='text-align:center;margin:0 auto'>{{pool.billHint}}</text>
-        <text wx:if='{{pool.state=="FINISHED"}}' class='bloc' style='text-align:center;margin:0 auto'>互助完成金额</text>
-      </view>
-      <view wx:if='{{pool.state=="RUNNING"}}' class='wm_body col'>
-        <view class='wm_money col-4'>
-          <text class=''>互助目标</text>
-          <text class=''><text class='col_red'>{{pool.rtbill.value}}</text>{{pool.rtbill.unit}}</text>
-        </view>
-        <view class='wm_timer col-4'>
-          <text class=''>时限</text>
-          <text class=''><text class='col_red'>{{pool.rduration}}</text></text>
-        </view>
-        <view class='wm_prace col-4'>
-          <text class=''>价格</text>
-          <text class=''><text class='col_red'>{{pool.ubill*0.01}}</text>元/份</text>
-        </view>
-      </view>
-      <view wx:if='{{pool.state=="FINISHED"}}'  class='wm_jindu' style='padding-top:15px'>
-      </view>
-      <view wx:if='{{pool.state=="RUNNING"}}'  class='wm_jindu' style='padding-top:15px'>
-        <progress class='wm_progress' percent='{{pool.percentVal}}' activeColor='#5ecd98' backgroundColor='#a0a0a0' stroke-width='20'>
-          <text class='baifenbi'>{{pool.percentVal}}%</text>
-        </progress>
-        <view  class='yz_group row' style='width:70%;margin:5px auto'>
-          <view class='flex-item' style='margin:30rpx 0px 30rpx 0px;'>
-            <button id="{{pool.pid}}" class='{{pool.btnStyle}}' catchtap="onPoolControl" style='{{pool.btnStyle}}'>{{pool.btnText}}</button>
-           
-         
-          </view>
-        </view>
-      </view>
-      <!-- 进度结束 -->
-    </view>
-    </view>
-<!--新加梦想池  结束-->
+<!--UI 1.1 版本-->
 
- </view>
- <!-- 底部导航栏 -->
- <!--view class="weui-footer_fixed-bottom m_footer row">
-    <view class='col'>
-      <view class='col-4 m_active'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc'>参与互动</text> 
+
+<!-- 小梦想互助--我的参与页面 -->
+<!-- 
+    dream_status:小梦想互助池的状态
+    dream_statusTab:切换状态的按钮
+    dream_content:梦想池内容
+    pool:梦想池
+    left:左半部分
+    right：右半部分
+    title：梦想池期数
+    timeout：倒计时
+    money:目前资金
+ -->
+<view class='dreamHelp'>
+    <view class='dream_status'>
+        <view class='dream_statusTab'>
+            <button id="running"  bindtap="switchType" class='{{type.running}}' >进行中</button>
+            <button id="joined"  bindtap="switchType" class='{{type.joined}}'>我参与</button>
+            <button id="history"  bindtap="switchType" class='{{type.history}}' >已结束</button>
+        </view>
     </view>
-    <view class='col-4'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc'>小梦想</text> 
+    <view class='dream_content'>
+        <!--进行中梦想池样式-->
+        <view wx:if="{{type.selection=='running'}}" wx:for="{{showingPool}}" wx:for-item="pool" wx:for-index="seek"  class='pool'>
+            <view class='left'>
+                <view class='title'>{{pool.ptitle}}</view>
+                <view class='timeout'>
+                    <view class='icon_clock'></view>
+                    <text>{{pool.tdescription}}</text>
+                </view>
+                <view class='money'>{{pool.realBill}}{{pool.unit}}</view>
+                <view class='tip'>{{pool.billHint}}</view>
+                <view class='price'>
+                    <view class='target'>互助目标 {{pool.rtbill.value}}{{pool.rtbill.unit}} </view>
+                    <view class='price_money'>价格 {{pool.ubill*0.01}}元/份</view>
+                </view>
+            </view>
+            <view class='right'>
+                <view class='above'>
+                 <canvas class='circle' canvas-id='bottom-1' style='z-index:-5;width:170rpx;height:170rpx;'></canvas>
+                 <canvas class='circle' canvas-id='top-1' style='width:170rpx;height:170rpx;'></canvas>
+                 <view class='progress'>{{pool.percentVal}}%</view>
+                </view>
+                <button id="{{pool.pid}}" catchtap="onPoolControl" class='under'>{{pool.btnText}}</button>
+            </view>
+        </view>
+        <!--我参与梦想池样式-->
+        <view  class='pool'>
+            <view class='left'>
+                <view class='title'>梦想互助20181220期</view>
+                <view class='timeout'>
+                    <view class='icon_clock'></view>
+                    <text>180:45:32</text>
+                </view>
+                <view class='money'>￥14,000</view>
+                <view class='tip'>目前互助金</view>
+                <view class='price'>
+                    <view class='target'>互助目标 20000 </view>
+                    <view class='price_money'>价格 5元/份</view>
+                </view>
+            </view>
+            <view class='right'>
+                <view class='above'>
+                 <canvas class='circle' canvas-id='bottom-2' style='z-index:-5;width:170rpx;height:170rpx;'></canvas>
+                  <canvas class='circle' canvas-id='top-2' style='width:170rpx;height:170rpx;'></canvas>
+                 <view class='progress'>70%</view>
+                </view>
+                <button class='under'>继续互助</button>
+            </view>
+        </view>
+        <!--已完成梦想池样式-->
+        <view   class='pool'>
+            <view class='left'>
+                <view class='title'>梦想互助20181220期</view>
+                <view class='money'>￥14,000</view>
+                <view class='tip'>互助完成金额</view>
+                <view class='price'>
+                    <view class='target'>互助目标 20000 </view>
+                    <view class='price_money'>价格 5元/份</view>
+                </view>
+            </view>
+            <view class='right'></view>
+        </view>
     </view>
-    <view class='col-4'>
-      <image src='/image/canyuhuzhu.png' class='footer_logo'></image>
-      <text class='bloc' >我的</text> 
-    </view>
-    </view>
-  </view-->
-  <!-- 底部结束 -->
 </view>
