--- a/pages/mx_jinxing/mx_jinxing.wxss
+++ b/pages/mx_jinxing/mx_jinxing.wxss
@@ -6,7 +6,8 @@
 /* .menu{padding-top: 10px}
 .memu_act{border-bottom: solid medium #04bbff;padding: 0 5px 0px 5px} 
  .wm_menxiang{width: 40%;background: #5ecd98;border-radius:5px;opacity: 0.8;text-align: center;color: white;padding: 5px 5px 5px 5px;font-size: 30rpx} */
- page{background:#f1f4f7}
+ /*UI1.0版本*/
+ /*page{background:#f1f4f7}
 .box_huzhu{background: white;margin: 10px;border-radius: 10px}
 
 .page-head-title{display: flex;flex-direction: row;margin-top: 10px;margin-bottom: 5px;font-size: 14px}
@@ -30,4 +31,155 @@ border-radius: 10px;margin-top: 20px;}
 .baifenbi{position: absolute;left: 45%;top: 1px;color: white;font-size:14px}
 
 .page-buzhou{margin: 15px;display: flex;flex-direction: column;background: white;margin-top: 10px;border-radius: 10px;margin-bottom: 100px}
-.mat_30{margin-left: 30px;font-size: 14px}
+.mat_30{margin-left: 30px;font-size: 14px}*/
+
+/*UI 1.1 版本*/
+
+/* 小梦想互助--样式表 */
+.dreamHelp{
+    border-top: 1px solid #cccac9;
+}
+/* 状态切换部分--样式处理 */
+.dreamHelp .dream_status{
+    width: 100%;
+    height: 88rpx;
+    line-height: 88rpx;
+}
+.dreamHelp .dream_status .dream_statusTab{
+    width: 640rpx;
+    height: 100%;
+    margin: 0 auto;
+}
+.dreamHelp .dream_status .dream_statusTab button::after{
+    border:none;
+}
+.dreamHelp .dream_status .dream_statusTab button{
+    width: 168rpx;
+    border-radius: 0;
+    height: 100%;
+    line-height: 88rpx;
+    display: inline-block;
+    background-color: #fff;
+    font-size: 30rpx;
+    color: #666;
+    padding: 0; 
+    margin-right: 68rpx;
+}
+.dreamHelp .dream_status .dream_statusTab button:nth-child(3){
+    margin-right: 0;
+}
+.dreamHelp .dream_status .dream_statusTab button.active{
+    color: #00d094;
+    border-bottom: 2rpx solid #00d094;
+}
+/* 内容部分--样式处理 */
+.dreamHelp .dream_content{
+    width: 680rpx;
+    margin: 40rpx auto 0;
+}
+.dreamHelp .dream_content .pool{
+    width: 100%;
+    margin-bottom: 30rpx;
+    border-radius: 10rpx;
+    box-shadow: 2rpx 0rpx 1rpx 2rpx #cee5f9,-2rpx 0 1rpx 2rpx #cee5f9,0 2rpx 1rpx 2rpx #cee5f9,0 -2rpx 1rpx 2rpx #cee5f9;
+    height: 322rpx;
+    position: relative;
+}
+.dreamHelp .dream_content .pool .left{
+    float: left;
+    margin-top: 30rpx;
+    margin-left: 30rpx;
+}
+
+.dreamHelp .dream_content .pool .left .title{
+    font-size: 32rpx;
+}
+.dreamHelp .dream_content .pool .left .timeout{
+    margin-top: 20rpx;
+    font-size: 28rpx;
+    color: #00d094;
+    margin-bottom: 8rpx;
+}
+
+.dreamHelp .dream_content .pool .left .timeout .icon_clock{
+    width: 23rpx;
+    height: 23rpx;
+    background: url(http://tdream.antit.top/image/clock.png) no-repeat;
+    background-size: 23rpx 23rpx;
+    margin-right: 10rpx;
+    display: inline-block;
+}
+.dreamHelp .dream_content .pool .left .money{
+    font-size: 48rpx;
+    color:#ffc057;
+    margin-bottom: 5rpx;
+}
+.dreamHelp .dream_content .pool .left .tip{
+    font-size: 24rpx;
+    color: #999;
+    margin-bottom: 5rpx;
+}
+.dreamHelp .dream_content .pool .left .price{
+    font-size: 24rpx;
+    color: #666;
+    padding-bottom: 30rpx;
+}
+.dreamHelp .dream_content .pool .left .price view{
+    display: inline-block;
+    margin-right: 20rpx;
+}
+.dreamHelp .dream_content .pool .right{
+    float: right;
+    width: 170rpx;
+    margin-top: 20rpx;
+    margin-right: 20rpx;
+}
+.dreamHelp .dream_content .pool .right .above{
+    width: 170rpx;
+    height: 170rpx;
+    /* background-color: red; */
+    position: relative;
+}
+/* 画布--样式处理 */
+.dreamHelp .dream_content .pool .right .above canvas.circle{
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.dreamHelp .dream_content .pool .right .above .progress{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 48rpx;
+    color: #ffc057;
+}
+.dreamHelp .dream_content .pool .right .under::after{
+    border:none;
+}
+.dreamHelp .dream_content .pool .right .under{
+    margin-top: 30rpx;
+    width: 170rpx;
+    height: 52rpx;
+    font-size: 28rpx;
+    line-height: 52rpx;
+    color: #fff;
+    background: #00d094;
+    border-radius: 26rpx;
+}
+
+/* 结束池子处理 */
+.dreamHelp .dream_content .pool:nth-child(3){
+    background-color: #f5f5f5;
+    color: #bdbdbd;
+    height: 255rpx;
+}
+.dreamHelp .dream_content .pool:nth-child(3) .money{
+    color: #bdbdbd;
+}
+.dreamHelp .dream_content .pool:nth-child(3) .right{
+    width: 148rpx;
+    height: 148rpx;
+    background: url(http://tdream.antit.top/image/ended.jpg) no-repeat;
+    background-size: 148rpx 148rpx;
+}
